samples/_failures_safe/1761533388_87fc3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ceb7bb87.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ceb7bb87.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
